--- a/src/css/app.css
+++ b/src/css/app.css
@@ -8,3 +8,18 @@
 .navbar-brand {
 	padding: 5px 15px !important;
 }
+.expander {
+    border: 1px solid black;
+    width: 250px;
+}
+
+.expander>.title {
+    background-color: black;
+    color: white;
+    padding: .1em .3em;
+    cursor: pointer;
+}
+
+.expander>.body {
+    padding: .1em .3em;
+}
